@@ -73,6 +73,7 @@ import org.springframework.web.client.RestTemplate;
 
 import java.net.URI;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
@@ -137,7 +138,7 @@ public class SamlLoginIT {
     private static SamlTestUtils samlTestUtils;
 
     @BeforeClass
-    public static void setupSamlUtils() throws Exception {
+    public static void setupSamlUtils() {
         assertTrue("Expected testzone1.localhost, testzone2.localhost, testzone3.localhost, testzone4.localhost to resolve to 127.0.0.1", doesSupportZoneDNS());
         samlTestUtils = new SamlTestUtils();
         try {
@@ -177,7 +178,7 @@ public class SamlLoginIT {
             try {
                 IntegrationTestUtils.deleteZone(baseUrl, zoneId, token);
                 IntegrationTestUtils.deleteProvider(token, baseUrl, "uaa", zoneId + ".cloudfoundry-saml-login");
-            } catch(Exception _){}
+            } catch(Exception ignored){}
         }
     }
 
@@ -242,7 +243,7 @@ public class SamlLoginIT {
         String firstUrl = "/oauth/authorize?"
                 + "client_id=" + clientId
                 + "&response_type=code"
-                + "&redirect_uri=" + URLEncoder.encode(redirectUri, "UTF-8");
+                + "&redirect_uri=" + URLEncoder.encode(redirectUri, StandardCharsets.UTF_8);
 
         webDriver.get(baseUrl + firstUrl);
         webDriver.findElement(By.xpath("//h2[contains(text(), 'Enter your username and password')]"));
@@ -255,7 +256,7 @@ public class SamlLoginIT {
     }
 
     @Test
-    public void incorrectResponseFromSamlIDP_showErrorFromSaml() throws Exception {
+    public void incorrectResponseFromSamlIDP_showErrorFromSaml() {
         String zoneId = "testzone3";
         String zoneUrl = baseUrl.replace("localhost",zoneId+".localhost");
 
@@ -354,7 +355,7 @@ public class SamlLoginIT {
     }
 
     @Test
-    public void testSingleLogoutWithLogoutRedirect() throws Exception {
+    public void testSingleLogoutWithLogoutRedirect() {
         String zoneId = "testzone2";
         String zoneUrl = baseUrl.replace("localhost",zoneId+".localhost");
 
@@ -413,7 +414,7 @@ public class SamlLoginIT {
         clientDetails.setClientSecret("secret");
         IntegrationTestUtils.createOrUpdateClient(zoneAdminToken, baseUrl, zoneId, clientDetails);
 
-        webDriver.get(zoneUrl + "/logout.do?redirect=" + URLEncoder.encode(redirectUrl, "UTF-8") + "&client_id=test-logout-redirect");
+        webDriver.get(zoneUrl + "/logout.do?redirect=" + URLEncoder.encode(redirectUrl, StandardCharsets.UTF_8) + "&client_id=test-logout-redirect");
         assertEquals(redirectUrl, webDriver.getCurrentUrl());
     }
 
@@ -485,8 +486,7 @@ public class SamlLoginIT {
     }
 
     protected BaseClientDetails createClientAndSpecifyProvider(String clientId, IdentityProvider provider,
-            String redirectUri)
-            throws Exception {
+            String redirectUri) {
 
         RestTemplate identityClient = IntegrationTestUtils.getClientCredentialsTemplate(
             IntegrationTestUtils.getClientCredentialsResource(baseUrl, new String[0], "identity", "identitysecret")
@@ -518,8 +518,7 @@ public class SamlLoginIT {
         return clientDetails;
     }
 
-    protected void deleteUser(String origin, String username)
-            throws Exception {
+    protected void deleteUser(String origin, String username) {
 
         String zoneAdminToken = IntegrationTestUtils.getClientCredentialsToken(serverRunning,
                                                                                "admin", "adminsecret");
@@ -543,7 +542,7 @@ public class SamlLoginIT {
         perform_SamlInvitation_Automatic_Redirect_In_Zone2("marissa3", "saml2", false);
     }
 
-    public void perform_SamlInvitation_Automatic_Redirect_In_Zone2(String username, String password, boolean emptyList) throws Exception {
+    public void perform_SamlInvitation_Automatic_Redirect_In_Zone2(String username, String password, boolean emptyList) {
         //ensure we are able to resolve DNS for hostname testzone1.localhost
         String zoneId = "testzone2";
         String zoneUrl = baseUrl.replace("localhost",zoneId+".localhost");
@@ -635,7 +634,7 @@ public class SamlLoginIT {
     }
 
     @Test
-    public void test_RelayState_redirect_from_idp() throws Exception {
+    public void test_RelayState_redirect_from_idp() {
         //ensure we are able to resolve DNS for hostname testzone1.localhost
         String zoneId = "testzone1";
 
@@ -699,7 +698,7 @@ public class SamlLoginIT {
     }
 
     @Test
-    public void testSamlLoginClientIDPAuthorizationAutomaticRedirectInZone1() throws Exception {
+    public void testSamlLoginClientIDPAuthorizationAutomaticRedirectInZone1() {
         //ensure we are able to resolve DNS for hostname testzone1.localhost
         String zoneId = "testzone1";
 
@@ -742,7 +741,7 @@ public class SamlLoginIT {
         provider = IntegrationTestUtils.createOrUpdateProvider(zoneAdminToken,baseUrl,provider);
         assertEquals(provider.getOriginKey(), provider.getConfig().getIdpEntityAlias());
 
-        List<String> idps = Arrays.asList(provider.getOriginKey());
+        List<String> idps = Collections.singletonList(provider.getOriginKey());
         String clientId = UUID.randomUUID().toString();
         String zoneUrl = baseUrl.replace("localhost", "testzone1.localhost");
         BaseClientDetails clientDetails = new BaseClientDetails(clientId, null, "openid", GRANT_TYPE_AUTHORIZATION_CODE, "uaa.none", zoneUrl);
@@ -769,7 +768,7 @@ public class SamlLoginIT {
 
 
     @Test
-    public void testSamlLogin_Map_Groups_In_Zone1() throws Exception {
+    public void testSamlLogin_Map_Groups_In_Zone1() {
         //ensure we are able to resolve DNS for hostname testzone1.localhost
         String zoneId = "testzone1";
         String zoneUrl = baseUrl.replace("localhost", "testzone1.localhost");
@@ -817,7 +816,7 @@ public class SamlLoginIT {
         provider = IntegrationTestUtils.createOrUpdateProvider(zoneAdminToken,baseUrl,provider);
         assertEquals(provider.getOriginKey(), provider.getConfig().getIdpEntityAlias());
 
-        List<String> idps = Arrays.asList(provider.getOriginKey());
+        List<String> idps = Collections.singletonList(provider.getOriginKey());
 
         String adminClientInZone = new RandomValueStringGenerator().generate();
         BaseClientDetails clientDetails = new BaseClientDetails(adminClientInZone, null, "openid", "authorization_code,client_credentials", "uaa.admin,scim.read,scim.write", zoneUrl);
@@ -925,7 +924,7 @@ public class SamlLoginIT {
         provider = IntegrationTestUtils.createOrUpdateProvider(zoneAdminToken,baseUrl,provider);
         assertEquals(provider.getOriginKey(), provider.getConfig().getIdpEntityAlias());
 
-        List<String> idps = Arrays.asList(provider.getOriginKey());
+        List<String> idps = Collections.singletonList(provider.getOriginKey());
 
         String adminClientInZone = new RandomValueStringGenerator().generate();
         BaseClientDetails clientDetails = new BaseClientDetails(adminClientInZone, null, "openid,user_attributes", "authorization_code,client_credentials", "uaa.admin,scim.read,scim.write,uaa.resource", zoneUrl);
@@ -1013,8 +1012,7 @@ public class SamlLoginIT {
 
     public void two_zone_saml_bearer_grant(boolean urlMetadata, String zoneName) throws Exception {
         //ensure we are able to resolve DNS for hostname testzone1.localhost
-        String zoneId = zoneName;
-        String zoneUrl = baseUrl.replace("localhost", zoneId+".localhost");
+        String zoneUrl = baseUrl.replace("localhost", zoneName +".localhost");
 
 
         //identity client token
@@ -1026,7 +1024,9 @@ public class SamlLoginIT {
 
         //create the zone
 
-        IdentityZone zone = IntegrationTestUtils.createZoneOrUpdateSubdomain(identityClient, baseUrl, zoneId, zoneId, null);
+        IdentityZone zone = IntegrationTestUtils.createZoneOrUpdateSubdomain(identityClient, baseUrl,
+                zoneName,
+                zoneName, null);
 
         String idpMetadataUrl = zoneUrl + "/saml/idp/metadata";
 
@@ -1061,7 +1061,7 @@ public class SamlLoginIT {
                                                                     GRANT_TYPE_SAML2_BEARER,
                                                                     "uaa.resource",
                                                                     null);
-        saml2BearerClient.setAutoApproveScopes(Arrays.asList("true"));
+        saml2BearerClient.setAutoApproveScopes(Collections.singletonList("true"));
         saml2BearerClient.setClientSecret("secret");
         saml2BearerClient = IntegrationTestUtils.createClient(adminToken, baseUrl, saml2BearerClient);
 
@@ -1104,7 +1104,7 @@ public class SamlLoginIT {
     }
 
     @Test
-    public void testSamlLogin_Email_In_ID_Token_When_UserID_IsNotEmail() throws Exception {
+    public void testSamlLogin_Email_In_ID_Token_When_UserID_IsNotEmail() {
 
         //ensure we are able to resolve DNS for hostname testzone1.localhost
         String zoneId = "testzone4";
@@ -1151,7 +1151,7 @@ public class SamlLoginIT {
         provider = IntegrationTestUtils.createOrUpdateProvider(zoneAdminToken,baseUrl,provider);
         assertEquals(provider.getOriginKey(), provider.getConfig().getIdpEntityAlias());
 
-        List<String> idps = Arrays.asList(provider.getOriginKey());
+        List<String> idps = Collections.singletonList(provider.getOriginKey());
 
         String adminClientInZone = new RandomValueStringGenerator().generate();
         BaseClientDetails clientDetails = new BaseClientDetails(adminClientInZone, null, "openid,user_attributes", "authorization_code,client_credentials", "uaa.admin,scim.read,scim.write,uaa.resource", zoneUrl);
@@ -1214,7 +1214,7 @@ public class SamlLoginIT {
 
 
     @Test
-    public void testSimpleSamlPhpLoginInTestZone1Works() throws Exception {
+    public void testSimpleSamlPhpLoginInTestZone1Works() {
         String zoneId = "testzone1";
 
         RestTemplate identityClient = IntegrationTestUtils.getClientCredentialsTemplate(
@@ -1353,12 +1353,12 @@ public class SamlLoginIT {
         try {
             webDriver.findElement(By.name("username"));
             fail("Element username should not be present");
-        } catch (NoSuchElementException x) {
+        } catch (NoSuchElementException ignored) {
         }
         try {
             webDriver.findElement(By.name("password"));
             fail("Element username should not be present");
-        } catch (NoSuchElementException x) {
+        } catch (NoSuchElementException ignored) {
         }
         webDriver.get(baseUrl + "/logout.do");
     }
@@ -1367,7 +1367,7 @@ public class SamlLoginIT {
     public void testSamlLoginClientIDPAuthorizationAutomaticRedirect() throws Exception {
         IdentityProvider<SamlIdentityProviderDefinition> provider = createIdentityProvider(SAML_ORIGIN);
         assertEquals(provider.getOriginKey(), provider.getConfig().getIdpEntityAlias());
-        List<String> idps = Arrays.asList(provider.getOriginKey());
+        List<String> idps = Collections.singletonList(provider.getOriginKey());
         webDriver.get(baseUrl + "/logout.do");
         String adminAccessToken = testClient.getOAuthAccessToken("admin", "adminsecret", "client_credentials", "clients.read clients.write clients.secret clients.admin");
 
@@ -1392,14 +1392,14 @@ public class SamlLoginIT {
     }
 
     @Test
-    public void testLoginClientIDPAuthorizationAlreadyLoggedIn() throws Exception {
+    public void testLoginClientIDPAuthorizationAlreadyLoggedIn() {
         webDriver.get(baseUrl + "/logout.do");
         String adminAccessToken = testClient.getOAuthAccessToken("admin", "adminsecret", "client_credentials", "clients.read clients.write clients.secret clients.admin");
 
         String clientId = UUID.randomUUID().toString();
         BaseClientDetails clientDetails = new BaseClientDetails(clientId, null, "openid", GRANT_TYPE_AUTHORIZATION_CODE, "uaa.none", "http://localhost:8080/login");
         clientDetails.setClientSecret("secret");
-        List<String> idps = Arrays.asList("okta-local"); //not authorized for the current IDP
+        List<String> idps = Collections.singletonList("okta-local"); //not authorized for the current IDP
         clientDetails.addAdditionalInformation(ClientConstants.ALLOWED_PROVIDERS, idps);
 
         testClient.createClient(adminAccessToken, clientDetails);
