@@ -92,7 +92,6 @@ import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertThat;
 import static org.junit.Assert.assertTrue;
-import static org.mockito.ArgumentMatchers.contains;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
@@ -102,7 +101,6 @@ import static org.springframework.test.web.servlet.request.MockMvcRequestBuilder
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.put;
-import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
@@ -706,7 +704,7 @@ public class ClientAdminEndpointsMockMvcTests {
         ClientDetails[] clients = clientArrayFromString(result.andReturn().getResponse().getContentAsString());
         for (ClientDetails client : clients) {
             assertNotNull(getClient(client.getClientId()));
-            assertEquals(new Integer(120), client.getRefreshTokenValiditySeconds());
+            assertEquals(Integer.valueOf(120), client.getRefreshTokenValiditySeconds());
         }
         //create and then update events
         verify(mockApplicationEventPublisher, times(count * 2)).publishEvent(abstractUaaEventCaptor.capture());
@@ -837,7 +835,7 @@ public class ClientAdminEndpointsMockMvcTests {
         for (int i = 0; i < count; i++) {
             ClientDetails c = getClient(details[i].getClientId());
             assertNotNull(c);
-            assertEquals(new Integer(120), c.getRefreshTokenValiditySeconds());
+            assertEquals(Integer.valueOf(120), c.getRefreshTokenValiditySeconds());
 
         }
         for (int i = count; i < (count * 2); i++) {
